--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.playingSquare {
+  width: 300px;
+  height: 500px;
+  background-color: white;
+}
+
+.dot {
+  background-color: darkgreen;
+  color: white;
+  width: 50px;
+  height: 50px;
+  /* border-radius: 25px; */
+}
