--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,29 +13,27 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .playingSquare {
   width: 300px;
   height: 500px;
   background-color: white;
+  position: relative;
+  border: 2px solid black;
 }
 
 .dot {
   background-color: darkgreen;
   color: white;
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
+  width: 70px;
+  height: 70px;
+  border-radius: 35px;
+  position: absolute;
+}
+
+.centerLine {
+  position: absolute;
+  top: 250px;
+  width: 99.3%;
+  height: 0px;
+  border: 1px solid red;
 }
