Generate random sequence plays note and activates dot, code made more concise with .some iteration

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
   justify-content: center;
 }
 
-.simonContainer {
+.simonDotContainer {
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
