--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
 
 .playingRectangle.simon {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   justify-content: center;
 }
 
