--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,12 @@
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
+  transition: background-color 1s ease-out;
+}
+
+.playingRectangle.simon.success {
+  background-color: lightgreen;
+  transition: background-color 0.1s ease-out;
 }
 
 .simonDotContainer {
