--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,11 @@
   transition: background-color 0.1s ease-out;
 }
 
+.playingRectangle.simon.failure {
+  background-color: lightcoral;
+  transition: background-color 0.1s ease-out;
+}
+
 .simonDotContainer {
   display: flex;
   flex-direction: column-reverse;
