--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,20 +14,21 @@
 }
 
 .playingRectangle {
-  width: 300px;
-  height: 500px;
+  width: 90%;
+  height: 80vh;
   background-color: white;
   position: relative;
   border: 2px solid black;
-  border-radius: 35px;
+  border-radius: 50px;
+  margin-bottom: 2%;
 }
 
 .dot {
   background-color: darkgreen;
   color: white;
-  width: 70px;
-  height: 70px;
-  border-radius: 35px;
+  width: 25vmin;
+  height: 25vmin;
+  border-radius: 50%;
 }
 
 .dotBop {
@@ -66,13 +67,13 @@
 .dotSimon {
   position: relative;
   border: 2px solid rgb(44, 44, 44);
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
 
 .dotSimon.active {
   transform: scale(0.9);
   filter: brightness(50%);
-  transition: .1s ease;
+  transition: 0.1s ease;
 }
 
 .testButton {
@@ -84,7 +85,7 @@
 
 .centerLine {
   position: absolute;
-  top: 250px;
+  top: 50%;
   width: 99.3%;
   height: 0px;
   border: 1px solid black;
@@ -119,4 +120,5 @@
 .scoreBoard {
   display: flex;
   gap: 20px;
+  height: 10vh;
 }
