--- a/src/App.css
+++ b/src/App.css
@@ -91,9 +91,18 @@
   border: 1px solid black;
 }
 
+.linkContainerDiv {
+  margin-bottom: 20px;
+}
+
 .modeButton {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 5px;
+  font-size: 2rem;
+  text-decoration: none;
 }
 
 .gameLobby {
@@ -121,4 +130,11 @@
   display: flex;
   gap: 20px;
   height: 10vh;
+}
+
+.gameOverBopCountDisplay {
+  color: black;
+  transform: scale(3);
+  position: relative;
+  top: 50%;
 }
